# cthyb

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  array.hpp  array_test.cpp  common.h  cpplapack_suppl.h  ct_qmc_share.cpp  ct_qmc_share.h  dmft.cpp  dmft.h  erfc.cpp  erfc.h  green_func_0.cpp  green_func_0.h  gtau.cpp  gtau.h  hyb_qmc.cpp  hyb_qmc.h  hyb_qmc_main.cpp  hyb_qmc_param.init  matrix_update.cpp  matrix_update.h  mt.cpp  op_determinant.cpp  op_determinant.h  operators.cpp  operators.h  pade.h  sb_qmc.cpp  sb_qmc_main.cpp  sb_qmc_param.init  vector_type.hpp
examples/: Gf2.plt  chi2.plt  delta.in  delta.plt  params.ini  u.in
include/: array.hpp  ct_qmc_share.h  fft.h  fft_fftw.h  fft_gsl.h  gtau.h  hyb_qmc.h  mt.h  operators.h  pade.h  sb_qmc.h  vector_type.hpp
samples/: Gf2.plt  delta_w.in  gen_delta.py  params.ini  stat2.plt
samples/1orb/: Gf2.plt  chi2.plt  delta_w.in  gen_delta.py  params.ini
samples/3orb/: GSigma_t.plt  Gf_pade.plt  Gf_t.plt  Gf_w.plt  delta_t.plt  delta_w.in  delta_w.plt  ef.in  gen_delta.py  gen_umatrix.py  params.ini  self_pade.plt  self_w.plt  stat.plt  styles  u.in
samples/vertex/: Fig10.plt  README.md  chi2.plt  delta_w.in  ef.in  params.ini  u.in  vertex.plt  vertex_sp.plt  wmeasure.plt
src/: CMakeLists.txt  ct_qmc_share.cpp  fft_fftw.cpp  fft_gsl.cpp  gtau.cpp  hyb_qmc.cpp  hyb_qmc_main.cpp  pade.cpp
test/: README.md  array_test.cpp  test_fft_iw2tau.cpp  test_fft_tau2iw.cpp
